@@ -32,8 +32,13 @@ val runtime_bindir: string
 
     @since 4.14.0 *)
 
+val standard_library_default: string
+(** The configured value for the directory containing the standard libraries
+
+    @since 4.14.0 *)
+
 val standard_library: string
-(** The directory containing the standard libraries *)
+(** The effective directory containing the standard libraries *)
 
 val ccomp_type: string
 (** The "kind" of the C compiler, assembler and linker used: one of
